--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,134 +1,516 @@
 /* Base styling */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "DM Sans", sans-serif;
+}
+
+body {
+  background-color: #fff; /* Dark background */
+  color: #fff; /* Light text color */
+  font-family: "DM Sans", sans-serif;
+}
+
+.container {
+  width: 100vw;
+  margin: 0 auto;
+}
+
+/* Header Styling */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2vh 0;
+  margin-top: 0;
+  background-color: rgba(21, 24, 30, 0.1);
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.header-logo-section {
+  display: flex;
+  align-items: center;
+  padding-left: 2vw;
+  gap: 1vw;
+}
+
+.header h1 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 1px;
+}
+
+.header-logo-section img {
+  height: 30px;
+  width: auto;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+  padding-right: 2vw;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #e0e0e0;
+  font-weight: 400;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+}
+
+.nav a:hover {
+  opacity: 1;
+}
+
+.book-demo {
+  transition: background-color 0.3s, border-color 0.3s;
+  border: 1px solid rgba(208, 222, 251, 1);
+  background: transparent;
+  color: white;
+  border-radius: 0.6vw;
+  padding: 1.2vh 1.7vw;
+  font-size: 1vw;
+}
+
+.book-demo:hover {
+  background-color: rgba(132, 129, 129, 0.1);
+  border-color: #777;
+}
+
+/* Main Content */
+.main-content {
+  width: 100vw;
+  text-align: center;
+  margin-top: 8vh;
+}
+
+.main-content h2 {
+  font-weight: 500;
+  font-size: 2.5vw;
+  color: rgba(43, 48, 59, 1);
+  line-height: 4.5vw;
+  margin-bottom: 2vh;
+}
+
+/* Cards Section */
+.cards {
+  display: flex;
+  margin: 4vh 5vw 8vh;
+  justify-content: space-between;
+}
+
+.card {
+  position: relative;
+  border: 1px solid #333;
+  border-radius: 14px;
+  padding: 3vh 2vw 8vh;
+  width: 28%;
+  background-color: rgb(42, 55, 84);
+  box-shadow: 8px 8px 20px rgba(43, 48, 59, 0.8);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+.card h3 {
+  color: #fff;
+  font-size: 20px;
+  font-family: "DM Sans", Arial;
+}
+
+.card .tagline {
+  color: #aaa;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-family: "Afacad", sans-serif;
+}
+
+.card p {
+  font-size: 14px;
+  color: #ddd;
+  line-height: 1.6;
+}
+
+.card .description {
+  text-align: justify;
+}
+
+.card a {
+  position: absolute;
+  bottom: 2.5vh;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #4a90e2;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  margin-top: 10px;
+  transition: color 0.3s;
+  width: 100%;
+  font-size: 18px;
+  font-family: "Afacad", sans-serif;
+}
+
+.card a:hover {
+  color: #73b2ff;
+}
+
+.home-banner {
+  position: relative;
+  background-color: rgba(21, 24, 30, 1);
+  padding-top: 6vh;
+  overflow: hidden;
+  z-index: 5;
+}
+
+.home-banner-bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 30%;
+  z-index: 4;
+}
+
+.home-banner-ellipse {
+  position: absolute;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
   }
-  
-  body {
-    background-color: #fff; /* Dark background */
-    color: #fff; /* Light text color */
-    font-family: Arial, sans-serif;
+  to {
+    transform: rotate(360deg);
   }
-  
-  .container {
-    width: 100vw;
-    margin: 0 auto;
-  }
-  
-  /* Header Styling */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    margin-top: 0;
-    background-color: #02031f;
-  }
-  
-  .header h1 {
-    color: #ffffff;
-    font-size: 24px;
-  }
-  
-  .nav {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: #e0e0e0;
-    font-weight: bold;
-    opacity: 0.8;
-    transition: opacity 0.3s;
-  }
-  
-  .nav a:hover {
-    opacity: 1;
-  }
-  
-  .book-demo {
-    padding: 8px 16px;
-    background-color: #333;
-    color: #ffffff;
-    border: 1px solid #555;
-    cursor: pointer;
-    border-radius: 4px;
-    font-weight: bold;
-    transition: background-color 0.3s, border-color 0.3s;
-  }
-  
-  .book-demo:hover {
-    background-color: #555;
-    border-color: #777;
-  }
-  
-  /* Main Content */
-  .main-content {
-    text-align: center;
-    margin-top: 40px;
-  }
-  
-  .main-content h2 {
-    font-size: 28px;
-    color: #ffffff;
-    margin-bottom: 20px;
-    opacity: 0.9;
-  }
-  
-  /* Cards Section */
-  .cards {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-    justify-content: center;
-  }
-  
-  .card {
-    border: 1px solid #333;
-    border-radius: 8px;
-    padding: 20px;
-    width: 300px;
-    background-color: #2e2e2e;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-  
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
-  }
-  
-  .card h3 {
-    color: #fff;
-    margin-bottom: 10px;
-    font-size: 20px;
-  }
-  
-  .card .tagline {
-    color: #aaa;
-    font-weight: bold;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  
-  .card p {
-    font-size: 14px;
-    color: #ddd;
-    line-height: 1.6;
-  }
-  
-  .card a {
-    color: #4a90e2;
-    text-decoration: none;
-    font-weight: bold;
-    display: inline-block;
-    margin-top: 10px;
-    transition: color 0.3s;
-  }
-  
-  .card a:hover {
-    color: #73b2ff;
-  }
-  
+}
+
+.home-banner-ellipse-1,
+.home-banner-ellipse-2,
+.home-banner-ellipse-3,
+.home-testimonial-ellipse-1,
+.home-testimonial-ellipse-2,
+.home-testimonial-ellipse-3 {
+  animation: rotate 5s linear infinite;
+}
+
+.home-banner-ellipse-1 {
+  top: -60%;
+  left: 15%;
+  width: 69vw;
+  height: 69vw;
+  opacity: 0.6;
+  filter: blur(50px);
+  background: linear-gradient(130deg, #15181e 55%, #2563eb 90%);
+  z-index: 3;
+  /* display: none; */
+}
+
+.home-banner-ellipse-2 {
+  top: -50%;
+  left: 10%;
+  width: 73.5vw;
+  height: 73.5vw;
+  opacity: 0.6;
+  filter: blur(40px);
+  background: linear-gradient(130deg, #15181e 45%, #2532eb 90%);
+  z-index: 2;
+  /* display: none; */
+}
+
+.home-banner-ellipse-3 {
+  top: -45%;
+  left: 17%;
+  width: 68vw;
+  height: 68vw;
+  opacity: 0.8;
+  filter: blur(18px);
+  background: linear-gradient(90deg, #15181e 80%, #25c6eb 95%);
+  mix-blend-mode: lighten;
+  /* display: none; */
+  z-index: 1;
+}
+
+.home-banner-main {
+  margin: 27.5vh 0;
+}
+
+.home-banner-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10vh;
+  position: relative;
+  z-index: 5;
+}
+
+.home-banner-slogan {
+  color: rgba(143, 175, 245, 0.8);
+  font-family: "Afacad", Arial;
+  font-size: 1vw;
+  font-weight: 400;
+  margin-bottom: 2vh;
+}
+
+.home-banner-title {
+  font-size: 4vw;
+  font-weight: 400;
+  width: 60%;
+  text-align: center;
+  line-height: 4.5vw;
+  color: white;
+  margin-bottom: 4vh;
+}
+
+.home-banner-subtitle {
+  font-size: 1.1vw;
+  font-weight: 400;
+  font-family: "Afacad", Arial;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.home-banner-buttons-section {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  z-index: 5;
+}
+
+.home-banner-buttons-section p {
+  font-size: 1.1vw;
+  font-weight: 500;
+  font-family: "Afacad", Arial;
+  color: rgba(255, 255, 255, 1);
+}
+
+.home-banner-buttons p,
+.home-contact-notice-buttons p {
+  font-size: 1.2vw;
+  color: white;
+}
+
+.home-banner-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 2vw 8vh;
+}
+
+.home-banner-footer p {
+  font-size: 1vw;
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Afacad", Arial;
+  font-weight: 400;
+}
+
+.home-banner-footer span {
+  color: rgba(143, 175, 245, 1);
+  font-size: 1vw;
+  font-family: "Afacad", Arial;
+}
+
+.home-banner-footer img {
+  height: 0.8vw;
+  width: auto;
+}
+
+.section-31 {
+  background-color: #f7f9fc;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.container-12 {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  flex-flow: column;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 1560px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 75px 60px;
+  display: flex;
+}
+
+.home-data {
+  grid-column-gap: 110px;
+  grid-row-gap: 110px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 0;
+  display: flex;
+}
+
+.hd-header {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  max-width: 950px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 800;
+  display: flex;
+  color: rgba(43, 48, 59, 1);
+}
+
+.hd-inner h2 {
+  letter-spacing: 0.0025em;
+  margin-top: 0.75rem;
+  margin-bottom: 0.5rem;
+  font-size: 2.5rem;
+  line-height: 1.1;
+  font-weight: 500;
+  font-family: "DM Sans", Arial;
+}
+
+.heading-76 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 2.8rem;
+  font-weight: 500;
+  line-height: 1.4;
+  font-family: "DM Sans", Arial;
+}
+
+.heading-73 {
+  color: #2642b2;
+  font-size: 40px;
+}
+
+.heading-74 {
+  color: #2642b2;
+}
+
+.div-block-21 {
+  background-color: #a0d2ff;
+  width: 115px;
+  height: 5px;
+  margin-top: 20px;
+}
+
+.hd-content {
+  grid-column-gap: 30px;
+  grid-row-gap: 85px;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  margin-top: 60px;
+  padding: 10px 60px;
+  display: flex;
+  overflow: hidden;
+}
+
+.hd-wrapper {
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  border: 0 solid #d9d9d9;
+  border-right-width: 1px;
+  flex-direction: column;
+  flex: 0 auto;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 360px;
+  height: 100%;
+  padding-right: 30px;
+  display: flex;
+}
+
+.hd-wrapper.last {
+  border: none;
+}
+
+.hd-inner {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+}
+
+.heading-75 {
+  color: #2642b2;
+}
+
+.div-block-21 {
+  background-color: #a0d2ff;
+  width: 115px;
+  height: 5px;
+}
+
+.paragraph-14px-3 {
+  color: rgba(43, 48, 59, 1);
+  margin-top: 20px;
+  font-family: "Afacad", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
+  text-decoration: none;
+}
+
+.paragraph-16px-4 {
+  color: rgba(43, 48, 59, 0.5);
+  text-align: left;
+  object-fit: cover;
+  align-self: flex-start;
+  max-width: 400px;
+  min-height: 112px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  font-family: "Afacad", sans-serif;
+}
+
+.div-block-20 {
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s;
+  display: flex;
+}
+
+.link-6 {
+  margin-right: 0;
+  font-weight: 600;
+  text-decoration: underline;
+  transition-property: padding;
+  color: #2642b2;
+}
+
+.div-block-20:hover {
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.div-block-20 a:hover {
+    opacity: .5;
+}
+
+.div-block-20 a:active, a:hover {
+    outline: 0;
+}
